--- a/E-Commerce.API/E-Commerce.API.csproj
+++ b/E-Commerce.API/E-Commerce.API.csproj
@@ -9,12 +9,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Presentation\Presentation.csproj" />
-    <ProjectReference Include="..\Infrastructure\Presistence\Presistence.csproj" />
+    <ProjectReference Include="..\Infrastructure\Presistence\Persistence.csproj" />
   </ItemGroup>
 
 </Project>
