--- a/E-Commerce.API/E-Commerce.API.csproj
+++ b/E-Commerce.API/E-Commerce.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -17,7 +17,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Infrastructure\Presentation\Presentation.csproj" />
     <ProjectReference Include="..\Infrastructure\Presistence\Persistence.csproj" />
   </ItemGroup>
 
