--- a/Infrastructure/Presentation/Presentation.csproj
+++ b/Infrastructure/Presentation/Presentation.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App"></FrameworkReference>
+    </ItemGroup>
+	<ItItemGroup></ItemGroup>
+		
+	<Project
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Core\Services.Abstraction\Services.Abstraction.csproj" />
+	</ItemGroup>
+<>Item=
 </Project>
