Picture Url Resolver

--- a/E-Commerce.API/E-Commerce.API.csproj
+++ b/E-Commerce.API/E-Commerce.API.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Presentation\Presentation.csproj" />
     <ProjectReference Include="..\Infrastructure\Presistence\Persistence.csproj" />
   </ItemGroup>
 
