--- a/Core/Services/Services.csproj
+++ b/Core/Services/Services.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.10" />
   </ItemGroup>
 
   <ItemGroup>
