--- a/E-Commerce.API/appsettings.json
+++ b/E-Commerce.API/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ECommerceDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=ECommerceDb;Trusted_Connection=True;TrustServerCertificate=True;",
+     "RedisConnection" : "localHost"
   },
   "URLS": {
     "BaseUrl": "https://localhost:7069/"
