--- a/E-Commerce.API/appsettings.json
+++ b/E-Commerce.API/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=ECommerceDb;Trusted_Connection=True;TrustServerCertificate=True;",
-     "RedisConnection" : "localHost"
+    "IdentityConnection": "Server=.;Database=ECommerceDb.Identity;Trusted_Connection=True;TrustServerCertificate=True;",
+    "RedisConnection": "localHost"
   },
   "URLS": {
     "BaseUrl": "https://localhost:7069/"
